infra/apps-ingress-tls/nginx-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - hosts:
    - subdomain.domain.com
    secretName: nginx-app-prod-letsencrypt
  rules:
  - host: subdomain.domain.com
    http:
      paths:
      - path: /scan
        backend:
          serviceName: splat-uep
          servicePort: 8080
      - path: /report
        backend:
          serviceName: splat-report-gen
          servicePort: 8080
